--- a/wav_proj.dproj
+++ b/wav_proj.dproj
@@ -127,7 +127,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <Debugger_RunParams>toujyo.wav effect.wav 2</Debugger_RunParams>
+        <Debugger_RunParams>effect.wav 100 2000</Debugger_RunParams>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win64)'!=''">
@@ -146,8 +146,6 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="wav.pas"/>
-        <DCCReference Include="WriteHeader.pas"/>
         <DCCReference Include="spWav.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
