--- a/wav_proj.dproj
+++ b/wav_proj.dproj
@@ -147,6 +147,8 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="spWav.pas"/>
+        <DCCReference Include="effect.pas"/>
+        <DCCReference Include="WriteHeader.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
