--- a/wav_proj.dproj
+++ b/wav_proj.dproj
@@ -147,9 +147,9 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="spWav.pas"/>
-        <DCCReference Include="effect.pas"/>
         <DCCReference Include="WriteHeader.pas"/>
         <DCCReference Include="wav.pas"/>
+        <DCCReference Include="selectFile.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
