--- a/wav_proj.dproj
+++ b/wav_proj.dproj
@@ -149,6 +149,7 @@
         <DCCReference Include="spWav.pas"/>
         <DCCReference Include="wav.pas"/>
         <DCCReference Include="selectFile.pas"/>
+        <DCCReference Include="effect.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
