--- a/Project1.dproj
+++ b/Project1.dproj
@@ -229,6 +229,7 @@
         <DCCReference Include="effect.pas"/>
         <DCCReference Include="wav.pas"/>
         <DCCReference Include="selectFile.pas"/>
+        <DCCReference Include="WriteHeader.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
