--- a/Project1.dproj
+++ b/Project1.dproj
@@ -230,6 +230,7 @@
         <DCCReference Include="wav.pas"/>
         <DCCReference Include="selectFile.pas"/>
         <DCCReference Include="WriteHeader.pas"/>
+        <DCCReference Include="common.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
