以前のアプリケーションまでうまくいきまｓねん。完全に忘れています。 今回のアプリケーションが不具合を起こす場合は一度閉じてアプリを再起動してください。 ピッチの調整やいろいろなことがうまくいっていません。

--- a/Project1.dproj
+++ b/Project1.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>FMX</FrameworkType>
         <MainSource>Project1.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>95</TargetedPlatforms>
         <AppType>Application</AppType>
